Buy-step: make sure no scrolling is required on small screens in landscape mode.

--- a/CooleWebapp.Frontend/src/app/home/shop/buy-dialog/buy-dialog.component.css
+++ b/CooleWebapp.Frontend/src/app/home/shop/buy-dialog/buy-dialog.component.css
@@ -9,8 +9,8 @@
 .buy-product-image {
   width: 100%;
   height: auto;
-  max-height: 45vh;
-  max-width: 30vh;
+  max-height: 39vh;
+  max-width: 26vh;
   margin-left: auto;
   margin-right: auto;
 }
